[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "1.54.1"
correlation_flow = "0.1.4"
particle_filter = {git = "https://github.com/gjf2a/particle_filter"}
lazy_static = "1.4.0"
kmeans = {git = "https://github.com/gjf2a/kmeans"}
knn = {git = "https://github.com/gjf2a/knn"}
rand = "0.8"